# claims

./: .gitignore  ARCHITECTURE.md  BACKEND_EXECUTION_PLAN.md  BUILD_PLAN_BACKEND.md  BUILD_PLAN_FRONTEND.md  COMPONENT_CONTRACTS.md  DIAGRAMS.md  EVAL_REPORT.md  FUTURE_DIRECTIONS.md  PRD.md  README.md  SESSION_CHANGES.md  policy_terms_strict.json  render.yaml
backend/: .env.example  .gitignore  Makefile  pyproject.toml
backend/app/: aggregator.py  config.py  decision.py  engine.py
backend/app/agents/: __init__.py  cross_validation.py  doc_gate.py  echo.py  exclusion.py  extractor.py  financial.py  fraud.py  intake.py  member_resolver.py  policy_reasoner.py  prescription_check.py  rules.py  semantic.py
backend/app/api/: main.py  schemas.py  store.py
backend/app/api/routes/: claims.py
backend/app/blackboard/: __init__.py  core.py  scheduler.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: __init__.py  anthropic_client.py  base.py  fake.py  gemini.py
backend/app/policy/: __init__.py  loader.py
backend/tests/: test_aggregator.py  test_api.py  test_cross_validation.py  test_doc_gate.py  test_financial.py  test_llm.py  test_part6.py  test_policy.py  test_prescription_check.py  test_scheduler.py
backend/tests/eval/: loader.py  run_eval.py  test_eval.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CustomView.tsx  DemoView.tsx  DevConfig.tsx  DocPreview.tsx  EvalView.tsx  PdfCanvas.tsx  PolicyPanel.tsx  ResultPanel.tsx  RunHistory.tsx  (+3 more)
(+10 files in other folders)
